<resources>
    <string name="app_name">BraGuia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Navigation</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="voltar">Voltar</string>
    <string name="braguia_guia_tur_stico">BraGuia</string>
    <string name="bem_vindo_ao_braguia">Bem-vindo ao BraGuia!</string>
    <string name="registar">Registar</string>
    <string name="login">Login</string>
    <string name="localiza_o_e_navega_o">Localização e Navegação</string>
    <string name="conteudo_multim_dia">Conteudo Multimédia</string>
    <string name="utilizador">Utilizador</string>
    <string name="palavra_passe">Palavra Passe</string>
    <string name="ainda_n_o_tem_conta">Ainda não tem conta?</string>
    <string name="confirmar_palavra_passe">Confirmar Palavra Passe</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chamada_de_emerg_ncia">Chamada de emergência</string>
    <string name="nome_do_utilizador">Nome do utilizador:</string>
    <string name="utilizador_info">Utilizador</string>
    <string name="sem_nome">Sem nome</string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="consultar_pin_1">Consultar Pin 1</string>
    <string name="mudar_palavra_passe">Mudar Palavra-Passe</string>
    <string name="white_mode">White Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="google_maps">Google Maps Caminho da Salvação</string>
    <string name="bem_vindo_de_volta">Bem-Vindo de Volta</string>
    <string name="braguia_your_virtual_guide_in_braga">Your virtual guide in Braga</string>
    <string name="app_landing_page_text">Discover the hidden gems of Braga with our virtual guide app! Explore the city\'s rich history, stunning architecture, and vibrant culture from the palm of your hand. With personalized recommendations and insider tips, you\'ll experience the best of Braga like a local. Download the app now and start your adventure!</string>
    <string name="atributte">Atributte</string>
    <string name="valor">Valor</string>
    <string name="id">ID</string>
    <string name="defini_es">Definições</string>
    <string name="pin_image">Pin Image</string>
    <string name="pin_id">Pin ID</string>
    <string name="nome_pin">Nome Pin</string>
    <string name="localiza_o_pin">Localização Pin</string>
    <string name="descri_o">Descrição</string>
    <string name="udio">Começar Áudio</string>
    <string name="video">Começar Video</string>
    <string name="conte_do_multim_dia">Conteúdo Multimédia</string>
    <string name="informa_es">Informações</string>
    <string name="imagem">Imagem</string>
    <string name="informa_o_extra">Informação Extra</string>
    <string name="logout">logout</string>
    <string name="informa_o">Informação</string>
    <string name="socials">Socials</string>
    <string name="partner">Partner</string>
    <string name="notifica_es">Notificações</string>
    <string name="localiza_o">Localização</string>
    <string name="trail_image">Trail Image</string>
    <string name="ltimo_login">Último Login</string>
    <string name="tipo_de_utilizador">Tipo de Utilizador</string>
    <string name="email">Email</string>
    <string name="ltimo_nome">Último Nome</string>
    <string name="nome_de_utilizador">Nome de Utilizador</string>
    <string name="multim_dia">Multimédia</string>
    <string name="trilho">Trilho</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="dura_o">Duração</string>
    <string name="descricao">Descrição</string>
    <string name="id_do_trilho">ID do Trilho</string>
    <string name="imagens">Imagens:</string>
    <string name="check_if_pin_has_images">Check if pin has images</string>
    <string name="audios">Áudios:</string>
    <string name="pinimage">Pin Image</string>
    <string name="check_if_pin_has_audios">Check if pin has audios</string>
    <string name="v_deo">Vídeo:</string>
    <string name="check_if_pin_has_videos">Check if pin has videos</string>
    <string name="arrow_for_route">Arrow for route</string>
    <string name="come_ar_trilho">Começar Trilho</string>
    <string name="history">History</string>
    <string name="trilhos">Trilhos</string>
    <string name="pins">Pins</string>
    <string name="n_o_h_hist_rico">Não há histórico</string>
</resources>