<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textLoginViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editLoginTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLoginViewTitle"
        android:layout_marginTop="120dp"
        android:hint="@string/utilizador"
        android:inputType="text" />

    <EditText
        android:id="@+id/editLoginTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLoginTextUsername"
        android:layout_marginTop="16dp"
        android:hint="@string/palavra_passe"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLoginTextPassword"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoginLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/ainda_n_o_tem_conta"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonLoginParaRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewNoAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/registar"
        android:textColor="@android:color/black"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/buttonLoginVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/voltar"
        android:textColor="@android:color/white" />
</RelativeLayout>
