<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.RegisterFragment"
    android:id="@+id/RegisterFragment"
    android:background="?attr/Primario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textRegisterViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registar"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="?attr/Secundario"
                android:textStyle="bold|italic"/>

            <EditText
                android:id="@+id/editRegisterTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:hint="@string/utilizador"
                android:inputType="text" />

            <EditText
                android:id="@+id/editRegisterTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/palavra_passe"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/editTextRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirmar_palavra_passe"
                android:inputType="textPassword"/>

            <android.widget.Button
                android:id="@+id/buttonRegisterRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registar"
                android:background="@drawable/btn3"
                android:textColor="@color/white"/>


            <TextView
                android:id="@+id/textViewAlreadyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/j_tem_uma_conta"
                android:textColor="?attr/Texto1" />

            <Button
                android:id="@+id/buttonRegisterparaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login"
                android:textColor="?attr/Texto1"
            android:background="@android:color/transparent" />

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/buttonRegisterVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/voltar"
            android:textColor="@android:color/white"
            android:background="@drawable/btn3"/>
    </LinearLayout>

</FrameLayout>