<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.LoginFragment"
    android:id="@+id/LoginFragment"
    android:background="?attr/Primario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLoginViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="?attr/Secundario"/>

            <EditText
                android:id="@+id/editLoginTextUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="120dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/utilizador"
                android:drawableStart="@drawable/user_icon_black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/editLoginTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/key_icon"
                android:hint="@string/palavra_passe"
                android:inputType="textPassword"/>

            <android.widget.Button
                android:id="@+id/buttonLoginLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn3"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textViewNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ainda_n_o_tem_conta"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonLoginParaRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/registar"
                android:textColor="@color/black"
                android:background="@android:color/transparent" />
        </LinearLayout>


        <android.widget.Button
            android:id="@+id/buttonLoginVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:textColor="@color/white"
            android:background="@drawable/btn3"/>
    </LinearLayout>
</FrameLayout>