<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pins.PinFragment"
    android:background="@color/PrimarioLight">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp">
                <ImageView
                    android:id="@+id/imagePin"
                    android:tag="image_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="40dp"
                    android:maxHeight="40dp"
                    android:contentDescription="@string/pin_image" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinIDTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin_id"
                    android:background="@drawable/inputlayout"
                    android:layout_margin="@dimen/text_margin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pinID"
                        android:inputType="none"
                        android:textColor="?attr/Texto1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinNameTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_pin"
                    android:background="@drawable/inputlayout"
                    android:layout_margin="@dimen/text_margin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pinName"
                        android:inputType="none"
                        android:textColor="?attr/Texto1"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinLocationTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/localiza_o_pin"
                    android:background="@drawable/inputlayout"
                    android:layout_margin="@dimen/text_margin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pinLocation"
                        android:inputType="none"
                        android:textColor="?attr/Texto1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinDescTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descri_o"
                    android:background="@drawable/inputlayout"
                    android:layout_margin="@dimen/text_margin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pinDesc"
                        android:inputType="none"
                        android:textColor="?attr/Texto1"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TableLayout
                android:id="@+id/relpinsTable"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:layout_height="wrap_content">

                <TableRow
                    android:background="?attr/Secundario">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/id"
                        android:textStyle="bold"
                        android:textColor="?attr/Primario"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor"
                        android:textStyle="bold"
                        android:textColor="?attr/Primario"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/atributte"
                        android:textStyle="bold"
                        android:textColor="?attr/Primario"
                        android:gravity="center_horizontal"/>
                </TableRow>

            </TableLayout>


            <android.widget.Button
                android:id="@+id/buttonPinVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:textColor="@color/white"
                android:background="@drawable/btn3"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>