<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.trails.TrailListFragment"
    android:background="?attr/Primario">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="?attr/Secundario"
                android:textStyle="bold|italic"/>

            <TextView
                android:id="@+id/emptyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_o_h_hist_rico"
                android:textSize="30sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="46dp"
                android:textColor="?attr/Secundario"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/trails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trilhos"
                android:textSize="18sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="?attr/Secundario"
                android:textStyle="bold|italic"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layoutManager="LinearLayoutManager"
                tools:context=".ui.trails.TrailListFragment"
                tools:listitem="@layout/fragment_item" />

            <TextView
                android:id="@+id/pins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pins"
                android:textSize="18sp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="?attr/Secundario"
                android:textStyle="bold|italic"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyPinRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layoutManager="LinearLayoutManager" />




    </LinearLayout>

    </ScrollView>
</FrameLayout>



